--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,9 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.1",
     "expo": "^42.0.4",
+    "expo-sensors": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "public-ip": "^4.0.4",
     "react": "16.13.1",
@@ -20,8 +22,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
-    "expo-sensors": "~10.2.2"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
