--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.1",
+    "adb": "^0.2.0",
     "expo": "^42.0.4",
     "expo-sensors": "~10.2.2",
     "expo-status-bar": "~1.0.4",
